Remove logging module